# dictionary-rs

./: Cargo.toml  README.md
examples/: from_iter.rs  insert.rs
src/: dictionary.rs  lib.rs
